--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,44 @@
-django==3.0
+alabaster==0.7.13
+asgiref==3.7.2
+Babel==2.13.1
+certifi==2023.11.17
+charset-normalizer==3.3.2
+coverage==7.3.2
+Django==3.0
+docutils==0.20.1
+entrypoints==0.3
+exceptiongroup==1.1.3
 flake8==3.7.0
+gunicorn==21.2.0
+idna==3.6
+imagesize==1.4.1
+importlib-metadata==6.8.0
+iniconfig==2.0.0
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+mccabe==0.6.1
+packaging==23.2
+pluggy==1.3.0
+pycodestyle==2.5.0
+pyflakes==2.1.1
+Pygments==2.17.2
+pytest==7.4.3
 pytest-django==3.9.0
+pytz==2023.3.post1
+requests==2.31.0
+sentry-sdk==1.36.0
+six==1.16.0
+snowballstemmer==2.2.0
+Sphinx==7.1.2
+sphinxcontrib-applehelp==1.0.4
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.1
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
+sqlparse==0.4.4
+tomli==2.0.1
+typing_extensions==4.8.0
+urllib3==2.1.0
+whitenoise==6.6.0
+zipp==3.17.0
