--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ pyflakes==2.1.1
 Pygments==2.17.2
 pytest==7.4.3
 pytest-django==3.9.0
+python-dotenv==1.0.0
 pytz==2023.3.post1
 requests==2.31.0
 sentry-sdk==1.36.0
