--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ docutils==0.20.1
 entrypoints==0.3
 exceptiongroup==1.1.3
 flake8==3.7.0
+flake8-html==0.4.3
 gunicorn==21.2.0
 idna==3.6
 imagesize==1.4.1
@@ -31,9 +32,11 @@ sentry-sdk==1.36.0
 six==1.16.0
 snowballstemmer==2.2.0
 Sphinx==7.1.2
+sphinx-rtd-theme==2.0.0
 sphinxcontrib-applehelp==1.0.4
 sphinxcontrib-devhelp==1.0.2
 sphinxcontrib-htmlhelp==2.0.1
+sphinxcontrib-jquery==4.1
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.5
