--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ sentry-sdk==1.36.0
 six==1.16.0
 snowballstemmer==2.2.0
 Sphinx==7.1.2
+sphinx-copybutton==0.5.2
 sphinx-rtd-theme==2.0.0
 sphinxcontrib-applehelp==1.0.4
 sphinxcontrib-devhelp==1.0.2
