modified circleci config file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,24 +9,25 @@ jobs:
   executor:
         name: python/default
         tag: '3.8.6'
+
   run_tests:
     steps:
-        -checkout
-        -python/install-packages:
+        - checkout
+        - python/install-packages:
             pkg-manager: pip
-        -run:
+        - run:
             name: pytest-tests
             command: |
               python -m pytest
             
           # coverage run -m pytest 
           # coverage report --fail-under=80
-        -run:
+        - run:
             name: flake8
             command : |
               flake8 --format=html --htmldir=flake-report --extend-ignore=E251,E501,E712 lettings/ profiles/ oc_lettings_site/
 
-        -persist_to_workspace:
+        - persist_to_workspace:
             root: .
             paths:
               - .
@@ -54,8 +55,8 @@ jobs:
     docker:
       - image:circleci/python:3.8.6-browsers
     steps:
-      -checkout
-      -run:
+      - checkout
+      - run:
           name: deploy-image
           command: curl -X GET $WEBHOOK_URL https://api.render.com/deploy/srv-cm08gn6d3nmc738lg3gg?key=zq1NrtVz-3I
 
