--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,68 +2,25 @@
 # See: https://circleci.com/docs/configuration-reference
 version: 2.1
 
-orbs:
-  python: circleci/python@2.1.1
-
+# Define a job to be invoked later in a workflow.
+# See: https://circleci.com/docs/configuration-reference/#jobs
 jobs:
-  executor:
-    name: python/default
-    tag: '3.8.6'
-
-  run_tests:
-    steps:
-      - checkout
-      - python/install-packages:
-          pkg-manager: pip
-      - run:
-          name: pytest-tests
-          command: python -m pytest
-          # coverage run -m pytest 
-          # coverage report --fail-under=80
-      - run:
-          name: flake8
-          command : flake8 --format=html --extend-ignore=E251,E501,E712 lettings/ profiles/ oc_lettings_site/
-
-  build_image:
+  say-hello:
+    # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
+    # See: https://circleci.com/docs/configuration-reference/#executor-job
     docker:
-      - image: circleci/python:3.8.6-browsers
-        auth:
-          username: $DOCKERHUB_USERNAME
-          password: $DOCKERHUB_TOKEN
-    steps:
-      - checkout
-      - setup_remote_docker
-      - run:
-          name: build-image
-          command: |
-            docker build -t oc_lettings_django:latest .
-      - run:
-          name: push-image
-          command: |
-            docker login -u "$DOCKERHUB_USERNAME" --password-stdin "$DOCKERHUB_TOKEN" docker.io
-            docker push lisa367/oc_lettings_django:latest
-
-  deploy_app:
-    docker:
-      - image:circleci/python:3.8.6-browsers
+      - image: cimg/base:stable
+    # Add steps to the job
+    # See: https://circleci.com/docs/configuration-reference/#steps
     steps:
       - checkout
       - run:
-          name: deploy-image
-          command: curl -X GET $WEBHOOK_URL
+          name: "Say hello"
+          command: "echo Hello, World!"
 
-
-
+# Orchestrate jobs using workflows
+# See: https://circleci.com/docs/configuration-reference/#workflows
 workflows:
-  build_test_deploy:
+  say-hello-workflow:
     jobs:
-      -executor
-      - run_tests
-      - build_image
-          #requires:
-            #- run-tests
-      - deploy_app
-          #requires:
-            #- run-tests
-            #- build-image
-
+      - say-hello
