--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ version: 2.1
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/configuration-reference/#jobs
 jobs:
-  say-hello:
+  run_tests_suite:
     # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
     # See: https://circleci.com/docs/configuration-reference/#executor-job
     docker:
@@ -15,7 +15,10 @@ jobs:
     steps:
       - checkout
       - run:
-          name: "Say hello"
+          name: "run_test"
+          command: "echo Hello, World!"
+      - run:
+          name: "run_test"
           command: "echo Hello, World!"
 
 # Orchestrate jobs using workflows
@@ -23,4 +26,4 @@ jobs:
 workflows:
   say-hello-workflow:
     jobs:
-      - say-hello
+      - run_tests_suite
