--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,9 +21,42 @@ jobs:
           name: "run_test"
           command: "echo Hello, World!"
 
+  build_docker_image:
+    # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
+    # See: https://circleci.com/docs/configuration-reference/#executor-job
+    docker:
+      - image: cimg/base:stable
+    # Add steps to the job
+    # See: https://circleci.com/docs/configuration-reference/#steps
+    steps:
+      - checkout
+      - run:
+          name: "run_test"
+          command: "echo Hello, World!"
+      - run:
+          name: "run_test"
+          command: "echo Hello, World!"
+
+  deployment_on_render:
+    # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
+    # See: https://circleci.com/docs/configuration-reference/#executor-job
+    docker:
+      - image: cimg/base:stable
+    # Add steps to the job
+    # See: https://circleci.com/docs/configuration-reference/#steps
+    steps:
+      - checkout
+      - run:
+          name: "run_test"
+          command: "echo Hello, World!"
+      - run:
+          name: "run_test"
+          command: "echo Hello, World!"
 # Orchestrate jobs using workflows
 # See: https://circleci.com/docs/configuration-reference/#workflows
 workflows:
   say-hello-workflow:
     jobs:
       - run_tests_suite
+      - build_docker_image
+      - deployment_on_render
