--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,21 +2,27 @@
 # See: https://circleci.com/docs/configuration-reference
 version: 2.1
 
+orbs:
+  python: circleci/python@2.1.1
+
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/configuration-reference/#jobs
 jobs:
   run_tests_suite:
+    executor: python/default
     # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
     # See: https://circleci.com/docs/configuration-reference/#executor-job
-    docker:
-      - image: cimg/base:stable
+    #docker:
+      #- image: cimg/base:stable
     # Add steps to the job
     # See: https://circleci.com/docs/configuration-reference/#steps
     steps:
       - checkout
+      - python/install-packages:
+          pkg-manager: pip
       - run:
           name: "run_test"
-          command: pytest
+          command: python -m pytest
       - run:
           name: "run_test"
           command: "echo Hello, World!"
