--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,23 +34,32 @@ jobs:
     # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
     # See: https://circleci.com/docs/configuration-reference/#executor-job
     docker:
-      - image: cimg/base:stable
+      #- image: cimg/base:stable
+      - image: cimg/python:3.8.6-browsers
+        auth:
+            username: $DOCKERHUB_USERNAME
+            password: $DOCKERHUB_TOKEN
     # Add steps to the job
     # See: https://circleci.com/docs/configuration-reference/#steps
     steps:
       - checkout
+      - setup_remote_docker
       - run:
-          name: "run_test"
-          command: "echo Hello, World!"
+          name: "build_image"
+          command: |
+            docker build -t oc_lettings_django:latest .
       - run:
-          name: "run_test"
-          command: "echo Hello, World!"
+          name: "push_image"
+          command: |
+            docker login -u "$DOCKERHUB_USERNAME" --password-stdin "$DOCKERHUB_TOKEN" docker.io
+            docker push lisa367/oc_lettings_django:latest
 
   deploy_on_render:
     # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
     # See: https://circleci.com/docs/configuration-reference/#executor-job
     docker:
-      - image: cimg/base:stable
+      #- image: cimg/base:stable
+      - image: cimg/python:3.8.6-browsers
     # Add steps to the job
     # See: https://circleci.com/docs/configuration-reference/#steps
     steps:
@@ -67,5 +76,7 @@ workflows:
   oc_lettings-deployement:
     jobs:
       - run_tests_suite
-      - build_docker_image
+      - build_docker_image:
+          requires:
+            - run_tests_suite
       - deploy_on_render
