--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,8 +51,9 @@ jobs:
       - run:
           name: "push_image"
           command: |
-            docker login -u "$DOCKERHUB_USERNAME" -p "$DOCKERHUB_TOKEN"
-            docker push lisa367/oc_lettings_django:latest
+            docker images
+            #docker login -u "$DOCKERHUB_USERNAME" --password-stdin "$DOCKERHUB_TOKEN"
+            #docker push lisa367/openclassrooms-projet_13:latest
 
   deploy_on_render:
     # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
