--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,8 +23,10 @@ jobs:
       - run:
           name: "run_pytest"
           command: |
-            python manage.py collectstatic
-            python -m pytest
+            # python manage.py collectstatic
+            # python -m pytest
+            coverage run -m pytest
+            coverage report --fail-under=80
       - run:
           name: "run_flake8"
           command: |
